[gd_scene load_steps=4 format=3 uid="uid://dpsg5x4sb0f1t"]

[ext_resource type="Script" path="res://scripts/ui/inventory/inventoryslot.gd" id="1_gicl5"]

[sub_resource type="LabelSettings" id="LabelSettings_1oqmp"]
font_size = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y6i88"]

[node name="InventorySlot" type="Control"]
process_mode = 2
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 72.0
script = ExtResource("1_gicl5")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.356863)
metadata/_edit_use_anchors_ = true

[node name="InnerBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.356863)
metadata/_edit_use_anchors_ = true

[node name="ItemIcon" type="Sprite2D" parent="InnerBorder"]
position = Vector2(30, 30)
scale = Vector2(3.5, 3.5)

[node name="InfoPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -44.0
offset_top = -100.0
offset_right = 106.0

[node name="ItemName" type="Label" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Item name"
uppercase = true

[node name="Description" type="Label" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -26.0
offset_right = 70.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
text = "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
label_settings = SubResource("LabelSettings_1oqmp")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_y6i88")

[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
